--- a/index.html
+++ b/index.html
@@ -1502,10 +1502,10 @@
             q4: "Renal artery fibromuscular dysplasia",
             q5: "IV calcium gluconate",
             q6: "Acute tubular necrosis",
-            q7: "His creatinine will return to 1.3 over the next week.",
+            q7: "His creatinine will return to 1.3 over the next week",
             q8: "IgA nephropathy (Berger disease)",
             q9: "Serum calcium",
-            q10: "Add angiotensin-converting enzyme inhibitor or angiotensin receptor blocker.",
+            q10: "Add angiotensin-converting enzyme inhibitor or angiotensin receptor blocker",
             q11: "Focal segmental glomerulosclerosis",
             q12: "Urinary sodium",
             q13: "The fractional urea clearance",
@@ -1532,7 +1532,7 @@
             q34: "papillary necrosis and tubulointerstitial inflammation",
             q35: "enalapril",
             q36: "diuretic use, vomiting",
-            q37: "Papillary necrosis and inability to concentrate the urine",
+            q37: "papillary necrosis and inability to concentrate the urine",
             q38: "renal parenchymal uric acid crystals",
             q39: "multiple myeloma",
             q40: "amyloidosis",
@@ -1593,7 +1593,7 @@
             q95: "Analgesic nephropathy",
             q96: "Renal biopsy",
             q97: "Tomato, potato crisps; banana.",
-            q98: "Hyponatremia",
+            q98: "hyponatremia",
             q99: "Renal size on ultrasound scan",
             q100: "MR angiography",
             q101: "Diabetic nephropathy",
@@ -1612,7 +1612,7 @@
             q114: "Minimal change disease",
             q115: "Genetics referral",
             q116: "Nephrotic syndrome",
-            q117: "Na+",
+            q117: "Na +",
             q118: "Myelopathy",
             q119: "Diffuse glomerulosclerosis",
             q120: "Hydronephrosis"
