--- a/index.html
+++ b/index.html
@@ -1049,12 +1049,12 @@
         </div>
         
         <div class="question" id="question-87">
-            <p>87. Which of the following does not produce red urine:</p>
+            <p>87- A sample of tissue from a renal biopsy is viewed using an electron microscope. Podocyte fusion is seen. What is the most likely outcome following the diagnosis of minimal change nephropathy in a 12-year-old male?</p>
             <div class="options">
-                <label><input type="radio" name="q87" value="Hemoglobinuria"> Hemoglobinuria</label>
-                <label><input type="radio" name="q87" value="Myoglobinuria"> Myoglobinuria</label>
-                <label><input type="radio" name="q87" value="Microscopic hematuria"> Microscopic hematuria</label>
-                <label><input type="radio" name="q87" value="Acute intermittent porphyria"> Acute intermittent porphyria</label>
+                <label><input type="radio" name="q87" value="Full recovery and no further episodes"> Full recovery and no further episodes</label>
+                <label><input type="radio" name="q87" value="Full recovery but with later relapses"> Full recovery but with later relapses</label>
+                <label><input type="radio" name="q87" value="Chronic kidney disease not requiring renal replacement therapy"> Chronic kidney disease not requiring renal replacement therapy</label>
+                <label><input type="radio" name="q87" value="Chronic kidney disease requiring renal replacement therapy within 1O years"> Chronic kidney disease requiring renal replacement therapy within 1O years</label>
             </div>
         </div>
         
@@ -1582,7 +1582,7 @@
             q84: "Pyelonephritis",
             q85: "Bleomycin",
             q86: "Response to corticosteroid",
-            q87: "Acute intermittent porphyria",
+            q87: "Full recovery but with later relapses",
             q88: "Clinical evidence of pericarditis",
             q89: "Snake bite",
             q90: "Chronic renal failure (CRF)",
