--- a/index.html
+++ b/index.html
@@ -1498,7 +1498,7 @@
         const answers = {
             q1: "Rhabdomyolysis-induced acute kidney injury",
             q2: "Colchicine 1.2 mg po initially, followed by 0.6 mg 1 hour later",
-            q3: "Give IV hydration with normal saline or sodium bicarbonate prior to and following the procedure.",
+            q3: "Give IV hydration with normal saline or sodium bicarbonate prior to and following the procedure",
             q4: "Renal artery fibromuscular dysplasia",
             q5: "IV calcium gluconate",
             q6: "Acute tubular necrosis",
